[gd_scene load_steps=3 format=3 uid="uid://rfai1qlvo2co"]

[ext_resource type="Script" path="res://Menu.gd" id="1_hkdei"]
[ext_resource type="Texture2D" uid="uid://js37hekp3dm6" path="res://res/MENU.png" id="2_qlxwp"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_hkdei")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.24815, 1.24815)
texture = ExtResource("2_qlxwp")
centered = false

[node name="PlayButton" type="Button" parent="."]
offset_left = 76.0
offset_top = 221.0
offset_right = 646.0
offset_bottom = 440.0

[node name="CreditsButton" type="Button" parent="."]
offset_left = 78.0
offset_top = 468.0
offset_right = 645.0
offset_bottom = 608.0

[node name="HowButton" type="Button" parent="."]
offset_left = 665.0
offset_top = 337.0
offset_right = 1123.0
offset_bottom = 602.0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="HowButton" to="." method="_on_how_button_pressed"]
